tests/ui/value_enum-unsupported-data.stderr
error: only enums are supported
 --> tests/ui/value_enum-unsupported-data.rs:3:10
  |
3 | #[derive(ValueEnum)]
  |          ^^^^^^^^^
  |
  = note: this error originates in the derive macro `ValueEnum` (in Nightly builds, run with -Z macro-backtrace for more info)

error: only enums are supported
 --> tests/ui/value_enum-unsupported-data.rs:6:10
  |
6 | #[derive(ValueEnum)]
  |          ^^^^^^^^^
  |
  = note: this error originates in the derive macro `ValueEnum` (in Nightly builds, run with -Z macro-backtrace for more info)

error: only enums are supported
 --> tests/ui/value_enum-unsupported-data.rs:9:10
  |
9 | #[derive(ValueEnum)]
  |          ^^^^^^^^^
  |
  = note: this error originates in the derive macro `ValueEnum` (in Nightly builds, run with -Z macro-backtrace for more info)

error: only enums are supported
  --> tests/ui/value_enum-unsupported-data.rs:12:10
   |
12 | #[derive(ValueEnum)]
   |          ^^^^^^^^^
   |
   = note: this error originates in the derive macro `ValueEnum` (in Nightly builds, run with -Z macro-backtrace for more info)
